# libmemcached

./: .bootstrap  .buildinfo  .bzrignore  .cirrus.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .hgignore  .quickly  .travis.yml  AUTHORS  BUGS.md  CMakeConfig.txt  CMakeLists.txt  CMakeVersions.txt  COPYING  CPack.txt  CPackDEB.txt  CPackFreeBSD.txt  CPackNSIS.txt  CPackRPM.txt  ChangeLog  ChangeLog-0.html  ChangeLog-0.md  ChangeLog-1.0.html  ChangeLog-1.0.md  ChangeLog-1.1.html  ChangeLog-1.1.md  ChangeLog-1.2.md  ChangeLog.md  Config.cmake  GNUmakefile  Include.cmake  LICENSE  LICENSE.HEADER  Makefile.am  README  README.FIRST  README.md  (+57 more)
clients/: CMakeLists.txt  Makefile.am  client_options.h  execute.c  execute.cc  execute.h  generator.c  generator.cc  generator.h  include.am  memaslap.c  memcapable.c  memcapable.cc  memcapable.sh  memcat.c  memcat.cc  memcat.sh  memcp.c  memcp.cc  memcp.sh  memdump.c  memdump.cc  memdump.sh  memerror.c  memerror.cc  memerror.sh  memexist.cc  memexist.sh  memflush.c  memflush.cc  memflush.sh  memparse.cc  memparse.sh  memping.cc  memping.sh  memrm.c  memrm.cc  memrm.sh  memslap.c  memslap.cc  (+24 more)
docs/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am.THIS  conf.py  conf.py.in  hashkit_create.rst  hashkit_functions.rst  hashkit_value.rst  include.am  index.rst  libhashkit.rst  libmemcached.pod  libmemcached.rst  libmemcached_configuration.rst  libmemcached_examples.pod  libmemcached_examples.rst  libmemcachedutil.pod  libmemcachedutil.rst  memaslap.pod  memaslap.rst  memcached_analyze.pod  memcached_analyze.rst  memcached_append.rst  memcached_auto.pod  memcached_auto.rst  memcached_behavior.pod  memcached_behavior.rst  memcached_callback.pod  memcached_callback.rst  memcached_cas.rst  memcached_create.pod  memcached_create.rst  memcached_delete.pod  memcached_delete.rst  memcached_dump.pod  memcached_dump.rst  memcached_flush.pod  memcached_flush.rst  memcached_flush_buffers.pod  (+52 more)
docs/client_errors/: MEMCACHED_AUTH_CONTINUE.rst  MEMCACHED_AUTH_FAILURE.rst  MEMCACHED_AUTH_PROBLEM.rst  MEMCACHED_BAD_KEY_PROVIDED.rst  MEMCACHED_BUFFERED.rst  MEMCACHED_CLIENT_ERROR.rst  MEMCACHED_CONNECTION_BIND_FAILURE.rst  MEMCACHED_CONNECTION_FAILURE.rst  MEMCACHED_CONNECTION_SOCKET_CREATE_FAILURE.rst  MEMCACHED_DATA_DOES_NOT_EXIST.rst  MEMCACHED_DATA_EXISTS.rst  MEMCACHED_DELETED.rst  MEMCACHED_DEPRECATED.rst  MEMCACHED_E2BIG.rst  MEMCACHED_END.rst  MEMCACHED_ERRNO.rst  MEMCACHED_FAILURE.rst  MEMCACHED_FAIL_UNIX_SOCKET.rst  MEMCACHED_FETCH_NOTFINISHED.rst  MEMCACHED_HOST_LOOKUP_FAILURE.rst  MEMCACHED_ITEM.rst  (+26 more)
example/: Makefile.am  byteorder.cc  common.h  cpp_example.cc  include.am  interface_v0.c  interface_v0.cc  interface_v1.c  interface_v1.cc  memcached_light.c  memcached_light.cc  memcached_light.h  storage.c  storage.cc  storage.h  storage_innodb.c
include/: CMakeLists.txt  Makefile.am  libhashkit-1.0  libmemcached-1.0  libmemcachedprotocol-0.0  libmemcachedutil-1.0  memcached.h  memcached.hh
lib/: Makefile.am  common.h  crc.c  hsieh_hash.c  libmemcached_probes.h  md5.c  memcached.c  memcached_auto.c  memcached_behavior.c  memcached_callback.c  memcached_connect.c  memcached_delete.c  memcached_do.c  memcached_fetch.c  memcached_fetch_execute.c  memcached_flush.c  memcached_get.c  memcached_hash.c  memcached_hosts.c  memcached_io.c  memcached_io.h  memcached_mget.c  memcached_multistorage.c  memcached_parse.c  memcached_quit.c  memcached_response.c  memcached_result.c  memcached_stats.c  memcached_storage.c  memcached_strerror.c  memcached_string.c  memcached_verbosity.c  memcached_version.c  memcachedplus.cpp
libhashkit/: CMakeLists.txt  Makefile.am  aes.cc  algorithm.c  algorithm.cc  algorithm.h  behavior.c  behavior.h  common.h  configure.h.in  crc32.c  default.c  digest.c  digest.cc  fnv.c  fnv.cc  fnv_64.cc  function.c  function.cc  function.h  has.cc  hashkit.c  hashkit.cc  hashkit.h  hashkit_create.html  hashkit_function.html  hashkit_functions.html  hashkit_value.html  hsieh.c  hsieh.cc  include.am  include.m4  index.html  jenkins.c  jenkins.cc  ketama.c  md5.c  md5.cc  murmur.c  murmur.cc  (+8 more)
libmemcached/: CMakeLists.txt  Makefile.am  allocators.c  allocators.cc  allocators.h  analyze.c  analyze.cc  analyze.h  array.c  array.h  assert.hpp  auto.c  auto.cc  auto.h  backtrace.cc  backtrace.hpp  basic_string.h  behavior.c  behavior.cc  behavior.h  behavior.hpp  byteorder.c  byteorder.cc  byteorder.h  callback.c  callback.cc  callback.h  common.h  configuration.html  configure.h.in  connect.c  connect.cc  connect.hpp  constants.h  constants.html  crc.c  defaults.html  delete.c  delete.cc  delete.h  (+223 more)
libmemcachedinternal/: CMakeLists.txt  include.am
libmemcachedutil/: CMakeLists.txt  Makefile.am  common.h  include.am  index.html  memcached_pool.c  memcached_pool.html  pid.cc  ping.cc  pool.cc  version.cc
src/: CMakeLists.txt  Makefile.am  client_options.h  execute.c  generator.c  generator.h  main.c  mem_config.h.in  memcat.c  memcp.c  memerror.c  memflush.c  memrm.c  memslap.c  memstat.c  utilities.c  utilities.h
support/: CMakeLists.txt  Makefile.am  ax_libmemcached.m4  example.cnf  include.am  libmemcached-config.cmake.in  libmemcached-fc.spec.in  libmemcached.pc.in  libmemcached.spec  libmemcached.spec.in  memcached.conf.in  memcached.pwdb.in
test/: CMakeLists.txt  LeakSanitizer.suppressions  conf.h.in  main.cpp  setup.cpp  setup.hpp  timeout.c
testing/: CMakeLists.txt  conf.h.in  lib.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  Makefile.am  atomsmasher.c  atomsmasher.cc  basic.cc  basic.h  c_test.c  callbacks.cc  cli.am  cpp_example.cc  cycle.cc  debug.cc  debug.h  deprecated.cc  error_conditions.cc  error_conditions.h  failure.cc  function.c  hash_plus.cc  hash_results.h  hashkit_functions.c  hashkit_functions.cc  include.am  ketama_test_cases.h  ketama_test_cases_spy.h  keys.hpp  libmemcached_test_container.h  libmemcached_world.h  libmemcached_world_socket.h  mem_functions.c  mem_functions.cc  mem_plus.cc  mem_udp.c  mem_udp.cc  memc.h  memcapable.cc  memcat.cc  memcp.cc  memdump.cc  memerror.cc  (+33 more)
(+1307 files in other folders)
