AC_INIT(src/memcat.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(include/libmemcached_config.h)
AM_INIT_AUTOMAKE("libmemcached", 0.3 )

AC_PROG_CC
AC_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --preserve-dup-deps"
AC_SUBST(LIBTOOL)dnl

sinclude(config/dtrace.m4)

# We only support GCC and Sun's forte at the moment
if test "$GCC" = "yes"
then
  CFLAGS="-Wall -ggdb"
else
  CFLAGS="-Xa -xstrconst -mt -D_FORTEC_ -fast -m64"
  LDFLAGS="-lsocket -lnsl"
  DTRACEFLAGS="-64"
fi

AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_HEADERS(limits.h syslimits.h)
AC_OUTPUT(Makefile src/Makefile tests/Makefile docs/Makefile lib/Makefile include/Makefile support/Makefile)
